# news-summarizer

./: .gitignore  compose.yaml  pyproject.toml
app/: Dockerfile  app.py  pyproject.toml
news-scraper/: .dockerignore  Dockerfile  app.py  news_scraper.py  news_scraper_logging.conf  pyproject.toml  scraper.py
news-scraper/src/: news_scraper_logging.conf
news-scraper/src/utils/: article_scraper.py  get_news.py
news-scraper/utils/: __init__.py  article_scraper.py  get_news.py
scraper/: scraper.py
summarizer/: .dockerignore  Dockerfile  main.py  pyproject.toml
summarizer/src/: main.py
summarizer/src/utils/: text_processing.py
summarizer/utils/: __init__.py
web-scraper/: scraper.py
web-scraper/scraper/: settings.py
web-scraper/scraper/spiders/: news_spider.py
