[project]
name = "news-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.12",
    "beautifulsoup4>=4.13.3",
    "googlenewsdecoder>=0.1.7",
    "lxml[html-clean]>=5.3.1",
    "pygooglenews>=0.1.3",
]
