[project]
name = "news-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.8",
    "googlenewsdecoder>=0.1.7",
    "orjson>=3.10.15",
    "pygooglenews>=0.1.3",
    "uvicorn>=0.34.0",
]
